--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
-name: 'The name of your action here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'Montara CI'
+description: 'Never merge a broken pipeline again'
+author: 'Montara'
 
 # Add your action's branding here. This will appear on the GitHub Marketplace.
 branding:
@@ -9,15 +9,14 @@ branding:
 
 # Define your inputs here.
 inputs:
-  milliseconds:
-    description: 'Your input description here'
+  webhookUrl:
+    description: 'The URL of the webhook'
     required: true
-    default: '1000'
 
 # Define your outputs here.
 outputs:
-  time:
-    description: 'Your output description here'
+  isPassing:
+    description: 'Whether the test run passed or not'
 
 runs:
   using: node20
