--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.1",
+    "@actions/github": "^6.0.0",
     "axios": "^1.7.2"
   },
   "devDependencies": {
