--- a/action.yml
+++ b/action.yml
@@ -15,6 +15,12 @@ inputs:
   isStaging:
     description: 'Whether the test run is for staging or not'
     required: false
+  numRetries:
+    description:
+      'The number of retries to check the pipeline run status. There is a 10
+      second delay between each retry. Default is 10.'
+    required: false
+    default: '10'
 
 # Define your outputs here.
 outputs:
