--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
+    "@montara-io/error-parsing": "^0.0.27",
     "axios": "^1.7.2"
   },
   "devDependencies": {
