chore: Update npm ci step in GitHub workflows to include NODE_AUTH_TOKEN

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -41,6 +41,8 @@ jobs:
       - name: Install Dependencies
         id: install
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.WORKFLOW_ACTION_TOKEN }}
 
       - name: Build dist/ Directory
         id: build
