--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       - name: Install Dependencies
         id: npm-ci
         run: npm ci
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.WORKFLOW_ACTION_TOKEN }}
 
       - name: Check Format
         id: npm-format-check
