--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,7 @@
     }
   },
   "remoteEnv": {
-    "MONTARA_GITHUB_TOKEN": "${localEnv:MONTARA_GITHUB_TOKEN}"
+    "GITHUB_TOKEN": "${localEnv:GITHUB_TOKEN}"
   },
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {},
