--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@actions/core": "^1.10.1",
     "@actions/github": "^6.0.0",
     "@montara-io/error-parsing": "^0.0.27",
+    "@segment/analytics-node": "^2.1.2",
     "axios": "^1.7.2"
   },
   "devDependencies": {
